apps/sock-shop/manifests/orders-db-dep.yaml
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: orders-db
  labels:
    name: orders-db
  namespace: sock-shop
spec:
  replicas: 1
  template:
    metadata:
      labels:
        name: orders-db
    spec:
      serviceAccountName: sock-shop
      containers:
      - name: orders-db
        image: mongo
        ports:
        - name: mongo
          containerPort: 27017
        # securityContext:
        #   capabilities:
        #     drop:
        #       - all
        #     add:
        #       - CHOWN
        #       - SETGID
        #       - SETUID
        #   readOnlyRootFilesystem: true
        volumeMounts:
        - mountPath: /tmp
          name: tmp-volume
        - mountPath: /data/db
          name: orders-data-volume
      volumes:
        - name: tmp-volume
          emptyDir:
            medium: Memory
        - name: orders-data-volume
          persistentVolumeClaim:
            claimName: orders-data-volume-claim
      nodeSelector:
        beta.kubernetes.io/os: linux
