apps/sock-shop/manifests/session-db-dep.yaml
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: session-db
  labels:
    name: session-db
  namespace: sock-shop
spec:
  replicas: 1
  template:
    metadata:
      labels:
        name: session-db
      annotations:
        prometheus.io.scrape: "false"
    spec:
      serviceAccountName: sock-shop
      containers:
      - name: session-db
        image: redis:alpine
        ports:
        - name: redis
          containerPort: 6379
        # securityContext:
        #   capabilities:
        #     drop:
        #       - all
        #     add:
        #       - CHOWN
        #       - SETGID
        #       - SETUID
        #   readOnlyRootFilesystem: true
      nodeSelector:
        beta.kubernetes.io/os: linux
