apps/sock-shop/manifests/user-db-dep.yaml
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: user-db
  labels:
    name: user-db
  namespace: sock-shop
spec:
  replicas: 1
  template:
    metadata:
      labels:
        name: user-db
    spec:
      serviceAccountName: sock-shop
      containers:
      - name: user-db
        image: weaveworksdemos/user-db:0.3.0
        ports:
        - name: mongo
          containerPort: 27017  
        volumeMounts:
        - mountPath: /tmp
          name: tmp-volume
        - mountPath: /data/db-users
          name: user-data-volume
      volumes:
        - name: tmp-volume
          emptyDir:
            medium: Memory
        - name: user-data-volume
          persistentVolumeClaim:
            claimName: user-data-volume-claim
      nodeSelector:
        beta.kubernetes.io/os: linux
