apps/sock-shop/manifests/front-end-route.yaml
---
apiVersion: v1
kind: Route
metadata:
  name: sock-shop
  namespace: sock-shop
spec:
  path: "/" 
  port:
    targetPort: 8079
  to:
    kind: Service
    name: front-end
